Tue Sep 23 12:10:49 2014  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.19

Mon Sep 22 14:41:46 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: I was misunderstanding the GIMPS
	  output on doublechecked exponents, leading to an incredibly
	  miniscule chance of reporting the wrong result on the least
	  non-double-checked exponent (in case the double check would prove
	  the initial LL wrong)

Mon Sep 22 13:17:18 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/examples.c, gtkextra/*.c: fix compiler warnings.  Also fix an
	  overuse of strlen, won't really improve performance, but I find
	  using "strlen(s) == 0" just annoying enough to make me change it
	  anyhow

Thu Sep 18 17:52:37 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix tab reordering, and add the close button
	  code that was commented out (i.e. make it work)

Wed Sep 17 00:08:16 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix some typos, thanks to Wolfgang Stoeggl

Tue Sep 16 16:30:42 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c:  Fitting dependent axis doesn't work if no
	  function is selected, so just ignore fitting when size is negative
	  rather than doing undefined things.  The whole thing is a mess,
	  we should allow fitting the lines that we draw and such I guess
	  not just functions.

Mon Sep 15 13:29:27 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/compil.c: new string decoding routine interacted with a stupid
	  optimization hence eating string constants from compiled files
	  starting with 'E'

	* src/gnome-genius.c, src/plugin.c: move the examples reading and
	  plugin reading to happen later so that things display seemingly
	  quicker. plus some other very minor optimizations for startup

Fri Sep 12 11:14:14 2014  Jiri (George) Lebl <jirka@5z.com>

	* examples/peano.gel: Add peano example in polar

Tue Sep 09 10:08:38 2014  Jiri (George) Lebl <jirka@5z.com>
