@@ -284,8 +284,12 @@ ve/Makefile
 gtkextra/Makefile
 examples/Makefile
 pixmaps/Makefile
+pixmaps/22x22/Makefile
+pixmaps/24x24/Makefile
 pixmaps/32x32/Makefile
 pixmaps/48x48/Makefile
+pixmaps/256x256/Makefile
+pixmaps/scalable/Makefile
 po/Makefile.in
 help/Makefile
 ])
