@@ -1,0 +1,12 @@
+# This file will be processed with automake-1.7 to create Makefile.in
+
+appsicondir = \
+	$(datadir)/icons/hicolor/256x256/apps
+appsicon_DATA = \
+	gnome-genius.png
+
+EXTRA_DIST = \
+	$(appsicon_DATA)
+
+MAINTAINERCLEANFILES = \
+	Makefile.in
