@@ -1,5 +1,5 @@
 SUBDIRS = \
-	32x32 48x48
+	22x22 24x24 32x32 48x48 256x256 scalable
 
 imagedir = \
 	$(datadir)/genius/
