@@ -1,3 +1,8 @@
+Tue Sep 30 17:02:54 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* pixmaps/*: add svg, 22x22, 24x24, 256x256 versions, and improve the
+	  32x32 version of icons.  Also recompress some other pngs
+
 Tue Sep 23 12:10:49 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* Release 1.0.19
